# lowtrop_pad

./: LICENSE  README.md  generating_gif.py  main_analysis.py  main_full_time.py  main_plotting.py  main_profile_processing.py  main_validation.py  pyproject.toml
data/reanalysis/: get_CARRA_profiles.py  get_CARRA_synoptic_pressure_lvl.py  get_CARRA_synoptic_single_lvl.py  get_ERA5_profiles.py  get_ERA5_synoptic.py
lowtrop_pad/: full_time_plotting.py  full_time_processing.py  mar_processing.py  plotting_profiles.py  plotting_synoptic.py  processing_profiles.py  profile_analysis.py  profiles_for_public.py  reanalysis_processing.py  validation_campaigns.py
