[tool.poetry]
name = "lowtrop-pad"
version = "0.1.0"
description = ""
authors = ["Heyjo1899 <jonathan.fipper@edu.uni-graz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
ruff = "^0.4.10"
cdsapi = "^0.7.0"
metpy = "^1.6.2"
xarray = "^2024.6.0"
cftime = "^1.6.4"
netcdf4 = "^1.7.1.post1"
scipy = "^1.14.0"
cartopy = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
