[tool.poetry]
name = "lowtrop-pad"
version = "0.1.0"
description = ""
authors = ["Heyjo1899 <jonathan.fipper@edu.uni-graz.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
ruff = "^0.4.10"
cdsapi = "^0.7.0"
metpy = "^1.6.2"
xarray = "^2024.6.0"
cftime = "^1.6.4"
netcdf4 = "^1.7.1.post1"
scipy = "^1.14.0"
cartopy = "^0.23.0"
requests = "^2.32.3"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
pymannkendall = "^1.4.3"
dask = {extras = ["distributed"], version = "^2024.12.0"}
geopandas = "^1.0.1"
rasterio = "^1.4.3"
rioxarray = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
